<resources>
    <string name="app_name">Lab 5 - Contacts</string>
    <string name="new_contact">Agregar contacto</string>
    <string name="contacts">Contactos</string>
    <string name="contact_name">Nombre</string>
    <string name="contact_email">Email</string>
    <string name="contact_phone">Telefono</string>
    <string name="create">Crear</string>
    <string name="back">Regresar</string>
    <string name="send">Enviar</string>
    <string name="contact_sender">Destinatario</string>
    <string name="email_message">Mensaje</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="remove_all_contacts">Eliminar todos</string>
    <string name="priority">Prioridad:</string>
</resources>
