<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/parent_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.SaveContactActivity">

    <include layout="@layout/toolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_contact"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar"
    />


    <EditText
            android:id="@+id/et_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
    />

    <EditText
            android:id="@+id/et_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:inputType="phone"
    />

    <EditText
            android:id="@+id/et_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:inputType="textEmailAddress"
    />

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                    android:orientation="horizontal"
                  android:layout_gravity="center"
    >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                    android:text="@string/priority"
                  android:gravity="center_vertical"
        />

        <NumberPicker
                android:id="@+id/number_picker_priority"
                android:layout_width="wrap_content"
                android:layout_height="60dp"

        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp">

        <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
        />

        <Button
                android:id="@+id/btn_save_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
        />

    </LinearLayout>



</LinearLayout>