<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.AddContactActivity">

    <ImageView
            android:id="@+id/iv_contact"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar"
    />

    <TextView
            android:id="@+id/tv_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            android:textSize="22sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
    />

    <TextView
            android:id="@+id/tv_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_phone"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:inputType="phone"
            android:textAlignment="center"
    />

    <TextView
            android:id="@+id/tv_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
    />


    <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
    />


</LinearLayout>